# causality

./: .gitignore  LICENSE  causality.cabal  env.sh  repl.osx.sh  repl.sh  runtest.sh
src/: Evidence.hs  Likelyhood.hs  Model.hs  Observations.hs  Population.hs
src/Examples/: DihybridCross.hs  MontyHall.hs
tests/: CausalModelTests.hs  ChainedModelTests.hs  DihybridCrossTests.hs  JoinModelTests.hs  Main.hs  MonohybridCrossTests.hs  MontyHallTests.hs  PhenotypeTests.hs  PopulationTests.hs  TestHarness.hs
