name:                causality
version:             0.1.0.0
synopsis:            Types and functions for dealing with causality in data
description:         Types and functions for dealing with causality in data
license:             BSD3
license-file:        LICENSE
author:              Jarl Christian Berentsen
maintainer:          chrberen@cisco.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

-- extra-source-files:  

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Model
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010

test-suite causality-tests
    ghc-options:       -Wall
    hs-source-dirs:    tests
    main-is:           Main.hs
    type:              exitcode-stdio-1.0
    build-depends:
        base
      , HUnit >= 1.2 && < 1.3
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , tasty-smallcheck
      , tasty-th
