name:                causality
version:             0.1.0.0
synopsis:            Types and functions for dealing with causality in data
description:         Types and functions for dealing with causality in data
license:             BSD3
license-file:        LICENSE
author:              Jarl Christian Berentsen
maintainer:          chrberen@cisco.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

-- extra-source-files:  

library
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  exposed-modules:
      Model
    , Population
    , Likelyhood
    , Evidence
    , Observations
    , Examples.MontyHall
    , Examples.DihybridCross

  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base
    , bytestring
    , containers
    , aeson

  default-language:    Haskell2010

test-suite causality-tests
    ghc-options:       -Wall -Werror
    hs-source-dirs:    tests
    main-is:           Main.hs
    type:              exitcode-stdio-1.0
    default-language:    Haskell2010
    build-depends:
        base
      , HUnit
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , tasty-smallcheck
      , tasty-th
      , QuickCheck
      , derive
      , causality
      , bytestring
      , containers
